--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>addCount</title>
+  <link rel="stylesheet" href="./index.css">
+  <style>
+    .test-box {
+      text-align: center;
+    }
+  </style>
 </head>
+
 <body>
+  <div class="test-box">
+    <h1>用于测试使用</h1>
     <button onclick="handlerClick(event)">点击增加</button>
+  </div>
 </body>
 <script src="./index.js"></script>
+
 </html>
